--- a/pages/index.html
+++ b/pages/index.html
@@ -4,17 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link-rel="stylesheet" href=" /dist/output.css">
-    <title>Document</title>>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <title>Masukan ATM</title>
 </head>
-<body class="bg-blue-700">
-    <div class="flex justify-center text-white font-bold mt-28 text-3xl">
-    <div class="space-y-80">
-        <p>SILAHKAN MASUKAN KARTU ANDA</p>
-        <p>PLEASE INSERT YOUR CARD</p>
+<body class="bg-blue-600">
+ <div class="flex mx-20 mt-10">
+        <div class="w-1/2">
+     <h1 class="text-3xl font-bold mt-10 text-white">SILAKAN MASUKAN KARTU<br>ANDA</h1>                              
+    
     </div>
-    <div class="my-8">
-    <img src="/img/insert.png">
-</div>
-</body>
+         <div class="w-1/2">
+             <a href="bahasa.html"><img class="w-500 mt-10" src="/asuu/img/insert.png" alt=""></a>
+         </div>
+        </div>
+    <div class="flex mx-20 mt-3 pt-7 ">
+        <h1 class="text-3xl font-bold text-white">PLEASE INSERT YOUR CARD</h1>
+
+    </div>
 </html>
+</body>
+ 
