--- a/pages/bahasa.html
+++ b/pages/bahasa.html
@@ -1,27 +1,47 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>kepo</title>
+    <title>Pilih Bahasa</title>
 </head>
-<body class="bg-blue-700">
-    <div class="text-center text-white font-bold text-3xl mt-5">
-        <div class="space-y-4">
-            <p>SILAHKAN PILIH BAHASA ANDA</p>
-            <p>_______________________________________</p>
-            <p>PLEASE SELECT YOUR LANGUAGE</p>
-        </div>
-        <div class="text-right text-xl mt-5 space-y-36 mr-96">
-            <a href="pin.html"><p>INDONESIA -></p></a>
-            <P>ENGLISH -></P>
-        </div>
-        <div class="text-center text-white font-bold text-3xl mt-11">
-            <div class="space-y-4">
-            <p>TO OBTAIN CARD PRESS CANCEL</p>
-            <p>___________________________________</p>
-            <P>TEKAN 'CANCEL' UNTUK MEMBATALKAN</P>
-        </div>
+<body class="bg-blue-600">
+    <div class="flex mx-20 mt-8 justify-center">
+     <h1 class="text-3xl font-bold mt-12 text-white ">SILAKAN PILIH BAHASA ANDA</h1>                              
+    </div>
+
+    <div class="flex mx-20 mt-8 justify-center">
+        <hr class="w-6/12">
+    </div>
+
+    <div class="flex mx-20 mb-10 justify-center">
+        <h1 class="text-3xl font-bold mt-12 text-white ">PLEASE SELECT YOUR LANGUANGE</h1>                              
+       </div>
+
+       <div class="text-right mx-20">
+       <a href="pin.html" <h1 class="text-3xl font-bold text-white ">INDONESIA -></h1></a>
+       </div>
+       <br>
+       <br>
+       <br>
+       <br>
+       <div class="text-right mx-20">
+        <h1 class="text-3xl font-bold text-white ">ENGLISH -></h1>
+       </div>
+
+       <div class="flex mx-20 mt-8 justify-center">
+        <h1 class="text-3xl font-bold mt-12 text-white ">TO OBTAIN CARD PRESS CANCEL</h1>                              
+       </div>
+
+     <div class="flex mx-20 mt-8 justify-center">
+        <hr class="w-6/12">
+    </div>
+
+    <div class="flex mx-20 mb-10 justify-center">
+        <h1 class="text-3xl font-bold mt-12 text-white ">TEKAN 'CANCEL' UNTUK MEMBATALKAN</h1>                              
+       </div>
+
+       </html>
 </body>
-</html>
