--- a/pages/pin.html
+++ b/pages/pin.html
@@ -12,15 +12,15 @@
 <body class="bg-blue-700">
     <div class="flex justify-center h-screen">
         <div class="flex justify-center container text-center bg-blue-700 ">
-            <div class="flex text-5xl font-bold items-center text-white">
-                <img class="w-6/12" src="/img/pin.png" alt="">
-                <div class="w-6/12 space-y-40">
+            <div class="flex text-3xl font-bold items-center text-white">
+                <img class="w-1/2" src="/asuu/img/pin.png" alt="">
+                <div class="w-1/2 space-y-40">
                     <h1>MASUKAN PIN</h1>
                     <form action="" onsubmit="pin()">
                         <input type="password" required class="text-black" id="angkapin">
                         <input type="submit" class="" value="ENTER">
                     </form>
-                    <h1>TEKAN 'ENTER' JIKA SELESAI MEMASUKAN PIN</h1>
+                    <h1>TEKAN 'ENTER' JIKA SELESAI<br> MEMASUKAN PIN</h1>
                 </div>
             </div>
         </div>
@@ -31,7 +31,7 @@
         let pin = document.getElementById("angkapin").value;
         console.info(pin);
         if (pin == '123456') {
-            window.open('/pages/ambiltunai.html', '_blank');
+            window.open('ambiltunai.html', '_blank');
             window.close();
         } else {
             alert('pin yang anda masukan salah')
